--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "node-dependency-injection": "^3.1.0"
   },
   "devDependencies": {
